tmpl/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
  name: ${K8S_NAMESPACE}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: https-echo
  namespace: ${K8S_NAMESPACE}
  labels:
    app: https-echo
spec:
  revisionHistoryLimit: 5
  replicas: 1
  selector:
    matchLabels:
      app: https-echo
  template:
    metadata:
      labels:
        app: https-echo
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: https-echo
          image: mendhak/http-https-echo:19
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
          resources:
            requests:
              memory: 400Mi
            limits:
              memory: 400Mi
---
apiVersion: v1
kind: Service
metadata:
  name: https-echo
  namespace: ${K8S_NAMESPACE}
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: https-echo
